cuttlefish-common (0.9.28) UNRELEASED; urgency=medium

  * Explicitly specify dependency on iproute2

 -- Jorge E. Moreira <jemoreira@google.com>  Tue, 23 Oct 2023 08:58:58 -0700

cuttlefish-common (0.9.27) unstable; urgency=medium

  * Increase nofile soft limit to support passthrough GPU modes

 -- Jason Macnak <natsu@google.com>  Tue, 23 May 2023 08:58:58 -0700

cuttlefish-common (0.9.26) stable; urgency=medium

  * Change operator's web UI to tile UI

 -- JaeMan Park <jaeman@google.com>  Fri, 13 Jan 2023 15:39:50 +0900

cuttlefish-common (0.9.25) unstable; urgency=medium

  [ Jorge Moreira Broche ]
  * Split source package into common and frontend

 -- JaeMan Park <jaeman@google.com>  Fri, 13 Jan 2023 15:39:34 +0900

cuttlefish-common (0.9.24) unstable; urgency=medium

  * Extract cuttlefish-base from cuttlefish-common
  * Extract operator from host-orchestrator

 -- Jorge Moreira Broche <jemoreira@google.com>  Wed, 09 Jun 2022 16:43:44 -0700

cuttlefish-common (0.9.23) unstable; urgency=medium

  * CreateCVD endpoints for orchestrator
  * Cosmetic changes to device list in signaling server
  * Ability to connect with devices in the device list page
  * Several bug fixes and improvements

 -- Jorge Moreira Broche <jemoreira@google.com>  Fri, 13 May 2022 15:01:21 -0700

cuttlefish-common (0.9.22) stable; urgency=medium

  * Don't require deviceId parameter in host-orchestrator
  * Start host-orchestrator on boot

 -- Jorge Moreira Broche <jemoreira@google.com>  Wed, 27 Apr 2022 13:33:43 -0700

cuttlefish-common (0.9.21) stable; urgency=medium

  * Initial version of host-orchestrator

 -- Jorge Moreira Broche <jemoreira@google.com>  Wed, 01 Dec 2021 15:03:04 -0800

cuttlefish-common (0.9.20) stable; urgency=medium

  [ Ram Muthiah ]
  * Rev'ng version number to account for removal of cuttlefish-google

 -- Ram Muthiah <rammuthiah@google.com>  Mon, 30 Sep 2021 13:26:02 -0700

cuttlefish-common (0.9.19) stable; urgency=medium

  [ Ram Muthiah ]